--- a/index.html
+++ b/index.html
@@ -10,5 +10,16 @@
     1st practice-guru
 
     2nd practice practice-guru
+
+    <bold>
+        3rd practice-guru
+        <li>
+            1g
+            2g
+            3g
+            4g
+            5g
+        </li>
+    </bold>
 </body>
 </html>
