--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     1st practice-guru
 
     2nd practice practice-guru
+    <h1 style="border: 2px solid Tomato;">Hello World</h1>
+
+<h1 style="border: 2px solid DodgerBlue;">Hello World</h1>
+
+<h1 style="border: 2px solid yello;">Hello World</h1>
 
     <bold>
         3rd practice-guru
