--- a/index.html
+++ b/index.html
@@ -64,7 +64,23 @@
 <h1 style="border: 2px solid DodgerBlue;">Hello World</h1>
 
 <h1 style="border: 2px solid yello;">Hello World</h1>
-
+div {
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    position: relative;
+    animation-name: example;
+    animation-duration: 4s;
+    animation-iteration-count: 3;
+  }
+  
+  @keyframes example {
+    0%   {background-color:red; left:0px; top:0px;}
+    25%  {background-color:yellow; left:200px; top:0px;}
+    50%  {background-color:blue; left:200px; top:200px;}
+    75%  {background-color:green; left:0px; top:200px;}
+    100% {background-color:red; left:0px; top:0px;}
+  }
     <bold>
         3rd practice-guru
         <li>
