--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>practice-guru</title>
     <style> 
         div {
-          width: 1000px;
+          width: 500px;
           height: 100px;
           position: relative;
           background-color: red;
@@ -18,7 +18,7 @@
         @keyframes example {
           0%   {background-color: red; left:0px;}
           50%  {background-color: yellow; left:1000px;}
-          100% {background-color: red; left:0px;}
+          100% {background-color:blue; left:0px;}
         }
     </style>
 </head>
